# sdso_flat_panel

./: README.md
ascom/ASCOM.SDSO.CoverCalibrator/: ASCOM.SDSO.CoverCalibrator.sln  SDSO Flat Panel Setup.iss
ascom/ASCOM.SDSO.CoverCalibrator/ASCOM.SDSO.CoverCalibrator/: ASCOM.SDSO.CoverCalibrator.csproj  CoverCalibratorDriver.cs  SetupDialogForm.cs  SetupDialogForm.designer.cs
ascom/ASCOM.SDSO.CoverCalibrator/ASCOM.SDSO.CoverCalibrator/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
firmware/SdsoFlatPanel/: .gitignore  CMakeLists.txt  SdsoFlatPanel.sln  SdsoFlatPanel.vgdbproj  flatpanel.c
